--- a/FlowerShop/FlowerShop/FlowerShop.csproj
+++ b/FlowerShop/FlowerShop/FlowerShop.csproj
@@ -43,6 +43,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.AI.Agent.Intercept, Version=1.2.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ApplicationInsights.Agent.Intercept.1.2.1\lib\net45\Microsoft.AI.Agent.Intercept.dll</HintPath>
       <Private>True</Private>
@@ -76,6 +84,8 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -117,6 +127,67 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\css\lightbox.css" />
+    <Content Include="Content\css\style.css" />
+    <Content Include="Content\css\stylecart.css" />
+    <Content Include="Content\images\about.gif" />
+    <Content Include="Content\images\banner.gif" />
+    <Content Include="Content\images\big_pic.jpg" />
+    <Content Include="Content\images\blank.gif" />
+    <Content Include="Content\images\border.gif" />
+    <Content Include="Content\images\box_bottom.gif" />
+    <Content Include="Content\images\box_center.gif" />
+    <Content Include="Content\images\box_top.gif" />
+    <Content Include="Content\images\bullet1.gif" />
+    <Content Include="Content\images\bullet2.gif" />
+    <Content Include="Content\images\bullet3.gif" />
+    <Content Include="Content\images\bullet4.gif" />
+    <Content Include="Content\images\bullet5.gif" />
+    <Content Include="Content\images\bullet6.gif" />
+    <Content Include="Content\images\cart.gif" />
+    <Content Include="Content\images\cart_thumb.gif" />
+    <Content Include="Content\images\center_bg.gif" />
+    <Content Include="Content\images\close.gif" />
+    <Content Include="Content\images\closelabel.gif" />
+    <Content Include="Content\images\color1.gif" />
+    <Content Include="Content\images\color2.gif" />
+    <Content Include="Content\images\color3.gif" />
+    <Content Include="Content\images\contact_bt.gif" />
+    <Content Include="Content\images\csscreme.gif" />
+    <Content Include="Content\images\de.gif" />
+    <Content Include="Content\images\footer_bg.gif" />
+    <Content Include="Content\images\footer_logo.gif" />
+    <Content Include="Content\images\fr.gif" />
+    <Content Include="Content\images\gb.gif" />
+    <Content Include="Content\images\header.jpg" />
+    <Content Include="Content\images\left_content_bg.gif" />
+    <Content Include="Content\images\left_menu_bullet.gif" />
+    <Content Include="Content\images\loading.gif" />
+    <Content Include="Content\images\logo.gif" />
+    <Content Include="Content\images\menu_bg.jpg" />
+    <Content Include="Content\images\menu_bg.png" />
+    <Content Include="Content\images\menu_bt_bg.gif" />
+    <Content Include="Content\images\new_icon.gif" />
+    <Content Include="Content\images\new_prod_box.gif" />
+    <Content Include="Content\images\next.gif" />
+    <Content Include="Content\images\nextlabel.gif" />
+    <Content Include="Content\images\order_now.gif" />
+    <Content Include="Content\images\prev.gif" />
+    <Content Include="Content\images\prevlabel.gif" />
+    <Content Include="Content\images\prod1.gif" />
+    <Content Include="Content\images\prod2.gif" />
+    <Content Include="Content\images\promo_icon.gif" />
+    <Content Include="Content\images\register_bt.gif" />
+    <Content Include="Content\images\special_icon.gif" />
+    <Content Include="Content\images\thumb1.gif" />
+    <Content Include="Content\images\thumb2.gif" />
+    <Content Include="Content\images\thumb3.gif" />
+    <Content Include="Content\images\zoom.gif" />
+    <Content Include="Content\js\effects.js" />
+    <Content Include="Content\js\java.js" />
+    <Content Include="Content\js\lightbox.js" />
+    <Content Include="Content\js\prototype.js" />
+    <Content Include="Content\js\scriptaculous.js" />
     <Content Include="Global.asax" />
     <Content Include="scripts\ai.0.22.9-build00167.js" />
     <Content Include="scripts\ai.0.22.9-build00167.min.js" />
@@ -124,9 +195,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Account.cs" />
+    <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\Employee.cs" />
+    <Compile Include="Models\FlowerShop.cs" />
+    <Compile Include="Models\Order.cs" />
+    <Compile Include="Models\OrdersDetail.cs" />
+    <Compile Include="Models\Product.cs" />
+    <Compile Include="Models\Role.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -135,6 +215,8 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Views\_LayoutMain.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -144,8 +226,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
